# moshi

moshi/: pyproject.toml  run.bat
moshi/moshi/: server.py
moshi/moshi/utils/: quantize.py
rust/: Cargo.toml
